@@ -6,7 +6,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import org.magic.api.beans.MTGCardStock;
 import org.magic.api.beans.MTGCollection;
@@ -100,7 +99,7 @@ public class TopDeckedExport extends AbstractFormattedFileCardExport {
 	@Override
 	public Map<String, MTGProperty> getDefaultAttributes() {
 		return Map.of(DEFAULT_COLLECTION, new MTGProperty(MTGConstants.DEFAULT_COLLECTIONS_NAMES[0], "Default Collection to bind imported stock item"),
-							DEFAULT_CONDITION,new MTGProperty(EnumCondition.values()[0].name(), "Default condition to apply to imported stock item", Arrays.stream(EnumCondition.values()).map(Enum::name).collect(Collectors.toList()).toArray(new String[0]))
+							DEFAULT_CONDITION,new MTGProperty(EnumCondition.values()[0].name(), "Default condition to apply to imported stock item", Arrays.stream(EnumCondition.values()).map(Enum::name).toList().toArray(new String[0]))
 				);
 	}
 
